layout position correctly.  working on spacing

--- a/src/components/Table/table.module.css
+++ b/src/components/Table/table.module.css
@@ -1,5 +1,9 @@
 .grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  /*grid-template-columns: auto auto auto;*/
   background-color: #ffa500;
+  justify-content: space-evenly;
+}
+.grid_item1 {
+  grid-column: 1 / 4;
 }
