--- a/src/pages/Gamepage.module.css
+++ b/src/pages/Gamepage.module.css
@@ -1,7 +1,8 @@
 .container {
+  display: flex;
+  justify-items: center;
+  width: auto;
   margin: auto;
-  width: 50%;
   border: 3px solid green;
-  background-color: orange;
   padding: 10px;
 }
